--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.0",
+    "node-fetch": "^3.3.1",
     "uuidv4": "^6.2.13"
   }
 }
